--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,11 @@
 <!-- 组件显示 -->
 <view hidden="{{currentTab == 0? false: true}}">
-	<component_index id="index"  uinfo="{{uinfo}}" bindinfo="{{bindinfo}}"/>
+	<component_home uinfo="{{uinfo}}" bindinfo="{{bindinfo}}"/>
 </view>
 <view hidden="{{currentTab == 1? false: true}}">
+	<component_index id="index" uinfo="{{uinfo}}" bindinfo="{{bindinfo}}"/>
+</view>
+<view hidden="{{currentTab == 2? false: true}}">
 	<component_me uinfo="{{uinfo}}" bindinfo="{{bindinfo}}" modalName="{{modalName}}" binduserLogin="userLogin" binduserLogout="userLogout" bindbindStuBtnClick="bindStuBtnClick" bindunbindStuBtnClick="unbindStuBtnClick"/>
 </view>
 
