--- a/app.wxss
+++ b/app.wxss
@@ -27,3 +27,10 @@ page {
 	box-shadow: 0 1px 2px rgb(150 150 150 / 30%);
 	padding-bottom: env(safe-area-inset-bottom);
 }
+
+.loading-card {
+	padding: 18rpx;
+	font-size: 13px;
+	font-weight: 600;
+	color: #ffffff;
+}
