--- a/pages/basic/index/index.wxss
+++ b/pages/basic/index/index.wxss
@@ -5,9 +5,14 @@
 	padding: 3px;
 }
 
+.kcb-item:active {
+	transform: scale(.98);
+	transition: .2s;
+}
+
 .smalltext {
-	line-height: 18px;
-	font-size: 13px;
+	line-height: 1.3;
+	font-size: 24rpx;
 	font-weight: 400;
 	color: #fff;
 	padding-left: 2px;
@@ -95,20 +100,26 @@
 .sidebar .item {
 	width: 32px;
 	height: 55px;
+	position: relative;
 	box-sizing: border-box;
 	text-align: center;
 	font-size: 22rpx;
 	border-bottom: 1px dashed rgb(219, 219, 219, .5);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 
 .sidebar .item .index {
-	font-weight: 500;
-	color: #9c9c9c;
-	padding: 10px 0 4px 0 !important;
+	font-weight: 600;
 }
 
-.sidebar .item .time {
+.sidebar .item .time,.sidebar .item .endtime {
+	position: absolute;
+	top: 0;
 	font-weight: 600;
+	color: #5f5f5f;
 }
 
 .wtbuLogo {
