更新了教务考试系统查询

--- a/app.wxss
+++ b/app.wxss
@@ -11,6 +11,10 @@ page {
 	padding: 18rpx;
 }
 
+.content-box.bg-image {
+	margin-top: 9.375rem;
+}
+
 .info-msg {
 	padding: 18rpx;
 	border-radius: 8px;
