--- a/colorui/components/cu-custom.wxml
+++ b/colorui/components/cu-custom.wxml
@@ -1,6 +1,6 @@
 <view class="custom-bar" style="height:{{CustomBar}}px;">
-	<view class="cu-bar fixed {{bgImage!=''?'none-bg text-white bg-img':''}} {{bgColor}}"
-		style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;{{bgImage?'background-image:url(' + bgImage+')':''}}">
+	<view class="cu-bar fixed {{bgImage?'none-bg text-white bg-img':''}} {{bgColor}}"
+		style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;">
 		<view class="action border-custom" wx:if="{{isBack}}" bindtap="BackPage"
 			style="width:{{Custom.height}}px;height:{{Custom.height}}px;margin-left:calc(750rpx - {{Custom.right}}px);margin-right: 8px;">
 			<text class="cuIcon-back"></text>
