--- a/app.wxss
+++ b/app.wxss
@@ -9,6 +9,9 @@ page {
 
 .content-box {
 	padding: 18rpx;
+	width: 100%;
+	position: relative;
+	display: block;
 }
 
 .content-box.bg-image {
@@ -26,8 +29,8 @@ page {
 }
 
 .cu-modal .cu-dialog {
-	border-top-left-radius: 15px!important;
-	border-top-right-radius: 15px!important;
+	border-top-left-radius: 15px !important;
+	border-top-right-radius: 15px !important;
 	box-shadow: 0 1px 2px rgb(150 150 150 / 30%);
 	padding-bottom: env(safe-area-inset-bottom);
 }
