--- a/pages/basic/index/index.wxss
+++ b/pages/basic/index/index.wxss
@@ -3,6 +3,7 @@
 	position: absolute;
 	border-radius: 5px;
 	padding: 3px;
+	overflow: hidden;
 }
 
 .kcb-item:active {
@@ -58,10 +59,11 @@
 }
 
 .weekbar .item .info {
-	margin-top: 4px;
-	font-weight: 400;
-	font-size: 10px;
-	opacity: .8;
+    margin-top: 4px;
+    font-weight: 400;
+    font-size: 10px;
+    opacity: .8;
+    line-height: 12px;
 }
 
 .weekbar .item {
@@ -115,7 +117,8 @@
 	font-weight: 600;
 }
 
-.sidebar .item .time,.sidebar .item .endtime {
+.sidebar .item .time,
+.sidebar .item .endtime {
 	position: absolute;
 	top: 0;
 	font-weight: 600;
@@ -149,4 +152,58 @@
 .wtbuSubTitle,
 .wtbuInfo {
 	text-align: center;
+}
+
+.guide {
+	position: fixed;
+	display: block;
+	background-color: #ffffff;
+    -webkit-box-shadow: 0 0 3px rgb(60 72 88 / 15%);
+    box-shadow: 0 0 3px rgb(60 72 88 / 15%);
+	border-radius: 3px;
+	z-index: 999;
+	color: #333333;
+	padding: 16px;
+	margin: 10px;
+	font-size: 16px;
+}
+
+.guidebg {
+	background-color: rgb(255 255 255 / 75%);
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    backdrop-filter: saturate(180%) blur(10px);
+}
+
+.guide::before {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 70px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 7px solid #495057;
+    border-color: transparent transparent #ffffff #ffffff;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: rotate(
+135deg);
+    transform: rotate(
+135deg);
+    -webkit-box-shadow: -2px 2px 2px -1px rgb(60 72 88 / 15%);
+    box-shadow: -2px 2px 2px -1px rgb(60 72 88 / 15%);
+	z-index: 2;
+}
+
+.guide .btn {
+    background-color: #5975ff;
+    padding: 10rpx 16rpx;
+    color: #ffffff;
+    display: inline-block;
+    border-radius: 3px;
+	font-size: 13px;
 }
