--- a/pages/basic/me/me.wxss
+++ b/pages/basic/me/me.wxss
@@ -119,6 +119,12 @@
 	font-weight: 400;
 }
 
+.user-set-box.teacher {
+	padding-top: 24rpx;
+	border-top-left-radius: 16px !important;
+	border-top-right-radius: 16px !important;
+}
+
 .bottom-modal {
 	transition-duration: 0.1s !important;
 	-ms-transform: scale(1);
