--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -5,6 +5,12 @@ page {
 	height: 100%;
 }
 
+.box {
+    width: 100%;
+    position: relative;
+    display: block;
+}
+
 .nav-tabs {
 	width: 100%;
 	display: flex;
@@ -25,7 +31,7 @@ page {
 }
 
 .tab-list.active .tab-text {
-	color: #3f51b5;
+	color: #5975ff;
 }
 
 .tab-text {
