--- a/pages/score/score.wxss
+++ b/pages/score/score.wxss
@@ -46,13 +46,24 @@ page {
 	box-shadow: 0 1px 4px 0 rgb(0 0 0 / 10%);
 }
 
+.score {
+    opacity: .8;
+    font-size: 13px;
+}
+
 .list {
 	position: relative;
 	background-color: #ffffff;
-	border-radius: 8px;
+	border-radius: 16rpx;
+	padding: 8px;
 	box-shadow: 0 1px 3px 0 rgb(0 0 0 / 2%), 0 16px 32px 0 rgb(0 0 0 / 7%);
 	-webkit-box-shadow: 0 1px 4px 0 rgb(0 0 0 / 10%);
 	box-shadow: 0 1px 4px 0 rgb(0 0 0 / 10%);
+}
+
+.list .title {
+	font-size: 1.1em;
+	border-bottom: 1px solid #eeeeee;
 }
 
 .list .item {
